Script / documentation improvements